Añadido PATCH y modificado PUT
